<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/lblTeamALabel"
                android:textColor="#616161"
                android:textSize="14sp"
                 />

            <TextView
                android:id="@+id/txtScoreA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="0"
                android:textColor="#000000"
                android:textSize="56sp"
                app:fontFamily="sans-serif-light" />

            <Button
                android:id="@+id/btn3PA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/colorPrimary"
                android:onClick="btn3PAOnClick"
                android:text="@string/btn3PLabelA" />

            <Button
                android:id="@+id/btn2PA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="btn2PAOnClick"
                android:background="@color/colorPrimary"
                android:text="@string/btn2PLabelA" />

            <Button
                android:id="@+id/btnFTA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="btnFTAOnClick"
                android:background="@color/colorPrimary"
                android:text="@string/btnFTLabelA" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/lblTeamBLabel"
                android:textColor="#616161"
                android:textSize="14sp"
                 />

            <TextView
                android:id="@+id/txtScoreB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="0"
                android:textColor="#000000"
                android:textSize="56sp"
                app:fontFamily="sans-serif-light" />

            <Button
                android:id="@+id/btn3PB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="btn3PBOnClick"
                android:background="@color/colorPrimary"
                android:text="@string/btn3PLabelB" />

            <Button
                android:id="@+id/btn2PB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="btn2PBOnClick"
                android:background="@color/colorPrimary"
                android:text="@string/btn2PLabelB" />

            <Button
                android:id="@+id/btnFTB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="btnFTBOnClick"
                android:background="@color/colorPrimary"
                android:text="@string/btnFTLabelB" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/btnResetLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>